--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "@nestjs/core": "^8.0.0",
         "@nestjs/mongoose": "^9.0.3",
         "@nestjs/platform-express": "^8.0.0",
+        "@types/qrcode": "^1.4.2",
         "axios": "^0.27.2",
         "mongoose": "^6.3.2",
         "nestjs-telegraf": "^2.4.1",
         "node-html-parser": "^5.3.3",
+        "qrcode": "^1.5.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
