--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@nestjs/core": "^8.0.0",
         "@nestjs/mongoose": "^9.0.3",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/swagger": "^5.2.1",
         "@types/qrcode": "^1.4.2",
         "axios": "^0.27.2",
         "mongoose": "^6.3.2",
@@ -37,6 +38,7 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "shortid": "^2.2.16",
+        "swagger-ui-express": "^4.4.0",
         "telegraf": "^4.8.2"
     },
     "devDependencies": {
